[gd_scene load_steps=18 format=3 uid="uid://dy68dcwghu8vq"]

[ext_resource type="Script" path="res://Script/title_scene.gd" id="1_n276v"]
[ext_resource type="Shader" path="res://Shaders/pixel_gradient.gdshader" id="1_vw7wa"]
[ext_resource type="Shader" path="res://Shaders/ingame_pokemon.gdshader" id="3_2a5tg"]
[ext_resource type="AudioStream" uid="uid://cqo6j14qxhg6h" path="res://Sounds/BGM/Title Screen.mp3" id="3_iivyo"]
[ext_resource type="Texture2D" uid="uid://bnfrnwrmr2hmk" path="res://Textures/Pokemons/Back/n/6.png" id="3_uafod"]
[ext_resource type="Texture2D" uid="uid://lk1iplb4ybio" path="res://Textures/Logos/LogoBW.png" id="6_j207v"]
[ext_resource type="Texture2D" uid="uid://b2hcflr0bb2a6" path="res://Textures/Pokemons/Front/n/132.png" id="7_iuv0v"]
[ext_resource type="AudioStream" uid="uid://tjrdv10ve6k4" path="res://Sounds/SFX/Other/button.mp3" id="8_vslog"]
[ext_resource type="Script" path="res://Script/PkmnShaderSetup.gd" id="9_2dw0h"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_b4vvs"]
shader = ExtResource("1_vw7wa")
shader_parameter/color1 = Color(0, 0.352941, 0.717647, 1)
shader_parameter/color2 = Color(0.988235, 1, 0.588235, 1)
shader_parameter/offset = 1.49012e-08
shader_parameter/pixelise = 10.0
shader_parameter/generate_offset = false
shader_parameter/wavy = 62.0
shader_parameter/wave_width = 10.0

[sub_resource type="SystemFont" id="SystemFont_cdlxh"]
font_names = PackedStringArray("Bauhaus 93")

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_ll1wl"]

[sub_resource type="Animation" id="Animation_ma212"]
resource_name = "start_game"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("BGM:playing")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Title:scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(0.1, 1),
"update": 0,
"values": [Vector2(1, 1), Vector2(50, 50)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Click:disabled")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("BG3:modulate")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(0.1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 1)]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("Click:visible")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}

[sub_resource type="Animation" id="Animation_11qn5"]
resource_name = "titlescene"
length = 7.0
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Title:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(5.1, 5.7),
"transitions": PackedFloat32Array(0.1, 1),
"update": 0,
"values": [Vector2(0, 0), Vector2(1, 1)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Title:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(5.2, 5.8),
"transitions": PackedFloat32Array(0.3, 1),
"update": 0,
"values": [Vector2(0, 200), Vector2(0, 350)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("ClickText:modulate")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(6.5, 7),
"transitions": PackedFloat32Array(0.3, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 1)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("BGM:playing")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0, 4.3),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [false, true]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("Background:modulate")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(3.5, 4.2),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 1)]
}
tracks/5/type = "value"
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/path = NodePath("ClickText:position")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/keys = {
"times": PackedFloat32Array(6.5, 7),
"transitions": PackedFloat32Array(0.3, 1),
"update": 0,
"values": [Vector2(0, 480), Vector2(0, 530)]
}
tracks/6/type = "value"
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/path = NodePath("ClickText:scale")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/keys = {
"times": PackedFloat32Array(6.5, 7),
"transitions": PackedFloat32Array(0.3, 1),
"update": 0,
"values": [Vector2(0.75, 1), Vector2(1, 1)]
}
tracks/7/type = "value"
tracks/7/imported = false
tracks/7/enabled = true
tracks/7/path = NodePath("Subtitle:modulate")
tracks/7/interp = 1
tracks/7/loop_wrap = true
tracks/7/keys = {
"times": PackedFloat32Array(6.5, 7),
"transitions": PackedFloat32Array(0.3, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 1)]
}
tracks/8/type = "value"
tracks/8/imported = false
tracks/8/enabled = true
tracks/8/path = NodePath("Subtitle:position")
tracks/8/interp = 1
tracks/8/loop_wrap = true
tracks/8/keys = {
"times": PackedFloat32Array(6.5, 7),
"transitions": PackedFloat32Array(0.3, 1),
"update": 0,
"values": [Vector2(-10, -15), Vector2(-10, 10)]
}
tracks/9/type = "value"
tracks/9/imported = false
tracks/9/enabled = true
tracks/9/path = NodePath("Click:disabled")
tracks/9/interp = 1
tracks/9/loop_wrap = true
tracks/9/keys = {
"times": PackedFloat32Array(0, 7),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [true, false]
}
tracks/10/type = "value"
tracks/10/imported = false
tracks/10/enabled = true
tracks/10/path = NodePath("Click:visible")
tracks/10/interp = 1
tracks/10/loop_wrap = true
tracks/10/keys = {
"times": PackedFloat32Array(0, 7),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [false, true]
}
tracks/11/type = "value"
tracks/11/imported = false
tracks/11/enabled = true
tracks/11/path = NodePath("Credits:modulate")
tracks/11/interp = 1
tracks/11/loop_wrap = true
tracks/11/keys = {
"times": PackedFloat32Array(0.7, 1.5, 2.8, 3.3, 6.5, 7),
"transitions": PackedFloat32Array(0.8, 1, 1, 1, 0.3, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 1), Color(1, 1, 1, 1), Color(1, 1, 1, 0), Color(1, 1, 1, 0), Color(1, 1, 1, 1)]
}
tracks/12/type = "value"
tracks/12/imported = false
tracks/12/enabled = true
tracks/12/path = NodePath("Logo:modulate")
tracks/12/interp = 1
tracks/12/loop_wrap = true
tracks/12/keys = {
"times": PackedFloat32Array(0.7, 1.5, 2.8, 3.3),
"transitions": PackedFloat32Array(0.8, 1, 1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 1), Color(1, 1, 1, 1), Color(1, 1, 1, 0)]
}
tracks/13/type = "value"
tracks/13/imported = false
tracks/13/enabled = true
tracks/13/path = NodePath("BG3:modulate")
tracks/13/interp = 1
tracks/13/loop_wrap = true
tracks/13/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 0)]
}
tracks/14/type = "value"
tracks/14/imported = false
tracks/14/enabled = true
tracks/14/path = NodePath("Credits:theme_override_colors/font_color")
tracks/14/interp = 1
tracks/14/loop_wrap = true
tracks/14/keys = {
"times": PackedFloat32Array(0.7, 6.5),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(0, 0, 0, 1), Color(1, 1, 1, 1)]
}
tracks/15/type = "value"
tracks/15/imported = false
tracks/15/enabled = true
tracks/15/path = NodePath("Credits:position")
tracks/15/interp = 1
tracks/15/loop_wrap = true
tracks/15/keys = {
"times": PackedFloat32Array(0.7, 3.3, 6.5, 7),
"transitions": PackedFloat32Array(1, 1, 0.3, 1),
"update": 0,
"values": [Vector2(0, 530), Vector2(0, 530), Vector2(0, 935), Vector2(0, 910)]
}
tracks/16/type = "value"
tracks/16/imported = false
tracks/16/enabled = true
tracks/16/path = NodePath("Pokemon1:position")
tracks/16/interp = 1
tracks/16/loop_wrap = true
tracks/16/keys = {
"times": PackedFloat32Array(4.5, 5.3),
"transitions": PackedFloat32Array(0.2, 1),
"update": 0,
"values": [Vector2(-279, -124), Vector2(-6, 63)]
}
tracks/17/type = "value"
tracks/17/imported = false
tracks/17/enabled = true
tracks/17/path = NodePath("Pokemon1:scale")
tracks/17/interp = 1
tracks/17/loop_wrap = true
tracks/17/keys = {
"times": PackedFloat32Array(4.5, 5.3),
"transitions": PackedFloat32Array(0.2, 1),
"update": 0,
"values": [Vector2(1, 1), Vector2(4, 4)]
}
tracks/18/type = "value"
tracks/18/imported = false
tracks/18/enabled = true
tracks/18/path = NodePath("Pokemon2:position")
tracks/18/interp = 1
tracks/18/loop_wrap = true
tracks/18/keys = {
"times": PackedFloat32Array(4.5, 4.6, 5.4),
"transitions": PackedFloat32Array(1, 0.1, 1),
"update": 0,
"values": [Vector2(600, 900), Vector2(600, 900), Vector2(290, 640)]
}
tracks/19/type = "value"
tracks/19/imported = false
tracks/19/enabled = true
tracks/19/path = NodePath("Pokemon2:scale")
tracks/19/interp = 1
tracks/19/loop_wrap = true
tracks/19/keys = {
"times": PackedFloat32Array(4.5, 4.6, 5.4),
"transitions": PackedFloat32Array(1, 0.1, 1),
"update": 0,
"values": [Vector2(8, 8), Vector2(8, 8), Vector2(5, 5)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_e86c6"]
_data = {
"start_game": SubResource("Animation_ma212"),
"titlescene": SubResource("Animation_11qn5")
}

[sub_resource type="ShaderMaterial" id="ShaderMaterial_x53rc"]
shader = ExtResource("3_2a5tg")
shader_parameter/spawn_anim = 3.0
shader_parameter/offset = 0.2
shader_parameter/death_animation = 0.0
shader_parameter/is_client = true
shader_parameter/status = 0
shader_parameter/raise_alpha = 0.0
shader_parameter/is_raise = true
shader_parameter/is_confused = false

[sub_resource type="ShaderMaterial" id="ShaderMaterial_r7vx7"]
shader = ExtResource("3_2a5tg")
shader_parameter/spawn_anim = 3.0
shader_parameter/offset = 0.0
shader_parameter/death_animation = 0.0
shader_parameter/is_client = false
shader_parameter/status = 0
shader_parameter/raise_alpha = 0.0
shader_parameter/is_raise = true
shader_parameter/is_confused = false

[node name="title_scene" type="Node2D"]
script = ExtResource("1_n276v")

[node name="BG2" type="ColorRect" parent="."]
show_behind_parent = true
offset_right = 540.0
offset_bottom = 960.0

[node name="Background" type="ColorRect" parent="."]
show_behind_parent = true
material = SubResource("ShaderMaterial_b4vvs")
offset_left = -391.0
offset_top = 118.0
offset_right = 504.0
offset_bottom = 1321.0
rotation = -0.436332

[node name="ClickText" type="Label" parent="."]
offset_top = 530.0
offset_right = 540.0
offset_bottom = 580.0
pivot_offset = Vector2(270, 0)
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_colors/font_shadow_color = Color(0.313726, 0.392157, 0.470588, 1)
theme_override_constants/shadow_offset_y = 3
theme_override_fonts/font = SubResource("SystemFont_cdlxh")
theme_override_font_sizes/font_size = 30
text = "Touchez pour commencer"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Subtitle" type="Label" parent="."]
offset_left = -10.0
offset_top = 10.0
offset_right = 530.0
offset_bottom = 60.0
pivot_offset = Vector2(270, 0)
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_colors/font_shadow_color = Color(0.313726, 0.392157, 0.470588, 1)
theme_override_constants/shadow_offset_y = 3
theme_override_fonts/font = SubResource("SystemFont_cdlxh")
theme_override_font_sizes/font_size = 20
text = "Dracaufeu VS Tortank"
horizontal_alignment = 2

[node name="Logo" type="TextureRect" parent="."]
modulate = Color(1, 1, 1, 0)
offset_left = 170.0
offset_top = 330.0
offset_right = 370.0
offset_bottom = 530.0
texture = ExtResource("6_j207v")
expand_mode = 1

[node name="Credits" type="Label" parent="."]
offset_top = 910.0
offset_right = 540.0
offset_bottom = 960.0
pivot_offset = Vector2(270, 0)
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_colors/font_shadow_color = Color(0.313726, 0.392157, 0.470588, 1)
theme_override_constants/shadow_offset_y = 3
theme_override_fonts/font = SubResource("SystemFont_cdlxh")
theme_override_font_sizes/font_size = 30
text = "Par Louistiti"
horizontal_alignment = 1
vertical_alignment = 1

[node name="BG3" type="ColorRect" parent="."]
modulate = Color(1, 1, 1, 0)
offset_right = 540.0
offset_bottom = 960.0

[node name="Title" type="Label" parent="."]
offset_top = 350.0
offset_right = 540.0
offset_bottom = 535.003
pivot_offset = Vector2(270, 92)
theme_override_colors/font_color = Color(0, 0.156863, 0.717647, 1)
theme_override_colors/font_shadow_color = Color(0.0784314, 0, 0.196078, 1)
theme_override_colors/font_outline_color = Color(0.988235, 1, 0.588235, 1)
theme_override_constants/shadow_offset_y = 10
theme_override_constants/outline_size = 20
theme_override_fonts/font = SubResource("SystemFont_cdlxh")
theme_override_font_sizes/font_size = 80
text = "POKEMON
MOBILE"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Click" type="Button" parent="."]
offset_right = 540.0
offset_bottom = 960.0
focus_mode = 0
mouse_default_cursor_shape = 2
theme_override_styles/normal = SubResource("StyleBoxEmpty_ll1wl")
theme_override_styles/hover = SubResource("StyleBoxEmpty_ll1wl")
theme_override_styles/pressed = SubResource("StyleBoxEmpty_ll1wl")
theme_override_styles/disabled = SubResource("StyleBoxEmpty_ll1wl")

[node name="BGM" type="AudioStreamPlayer" parent="."]
stream = ExtResource("3_iivyo")
bus = &"BGM"

[node name="Start" type="AudioStreamPlayer" parent="."]
stream = ExtResource("8_vslog")
bus = &"SFX"

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_e86c6")
}

[node name="Pokemon1" type="Sprite2D" parent="."]
show_behind_parent = true
material = SubResource("ShaderMaterial_x53rc")
position = Vector2(-6, 63)
rotation = 0.174533
scale = Vector2(4, 4)
texture = ExtResource("7_iuv0v")
centered = false
offset = Vector2(0, -10)
flip_h = true
script = ExtResource("9_2dw0h")

[node name="Pokemon2" type="Sprite2D" parent="."]
show_behind_parent = true
material = SubResource("ShaderMaterial_r7vx7")
position = Vector2(290, 640)
rotation = 0.174533
scale = Vector2(5, 5)
texture = ExtResource("3_uafod")
centered = false
offset = Vector2(-5, -15)
flip_h = true
script = ExtResource("9_2dw0h")

[connection signal="pressed" from="Click" to="." method="_on_click_pressed"]
[connection signal="texture_changed" from="Pokemon1" to="Pokemon1" method="_on_texture_changed"]
[connection signal="texture_changed" from="Pokemon2" to="Pokemon2" method="_on_texture_changed"]
